@@ -32,14 +32,19 @@ public abstract class Body {
     private final boolean modifyable = true;
     private final Function.LinearFunction iconSizer;
     private final double cartoonDiameterScaleFactor;
+    private Body parent;
+    private double cartoonOffsetScale;
 
-    public Body( String name, double x, double y, double diameter, double vx, double vy, double mass, Color color, Color highlight, Function.LinearFunction sizer, Function.LinearFunction iconSizer, double cartoonDiameterScaleFactor ) {
+    public Body( Body parent,//the parent body that this body is in orbit around, used in cartoon mode to exaggerate locations
+                 String name, double x, double y, double diameter, double vx, double vy, double mass, Color color, Color highlight, Function.LinearFunction sizer, Function.LinearFunction iconSizer, double cartoonDiameterScaleFactor, double cartoonOffsetScale ) {
+        this.parent = parent;
         this.name = name;
         this.color = color;
         this.highlight = highlight;
         this.sizer = sizer;
         this.iconSizer = iconSizer;
         this.cartoonDiameterScaleFactor = cartoonDiameterScaleFactor;
+        this.cartoonOffsetScale = cartoonOffsetScale;
         positionProperty = new Property<ImmutableVector2D>( new ImmutableVector2D( x, y ) );
         velocityProperty = new Property<ImmutableVector2D>( new ImmutableVector2D( vx, vy ) );
         accelerationProperty = new Property<ImmutableVector2D>( new ImmutableVector2D( 0, 0 ) );
@@ -237,6 +242,14 @@ public abstract class Body {
 
     public double getCartoonDiameterScaleFactor() {
         return cartoonDiameterScaleFactor;
+    }
+
+    public Body getParent() {
+        return parent;
+    }
+
+    public double getCartoonOffsetScale() {
+        return cartoonOffsetScale;
     }
 
     public static class PathPoint {
