@@ -9,8 +9,8 @@ import edu.colorado.phet.gravityandorbits.view.BodyRenderer;
  * @author Sam Reid
  */
 public class SphereBody extends Body {
-    public SphereBody( String name, double x, double y, double diameter, double vx, double vy, double mass, Color color, Color highlight, Function.LinearFunction sizer, double cartoonDiameterScaleFactor ) {
-        super( name, x, y, diameter, vx, vy, mass, color, highlight, sizer, sizer, cartoonDiameterScaleFactor );
+    public SphereBody( Body parent, String name, double x, double y, double diameter, double vx, double vy, double mass, Color color, Color highlight, Function.LinearFunction sizer, double cartoonDiameterScaleFactor, double cartoonOffsetScale ) {
+        super( parent, name, x, y, diameter, vx, vy, mass, color, highlight, sizer, sizer, cartoonDiameterScaleFactor, cartoonOffsetScale );
     }
 
     @Override
